# cyber-zen-tools-rust

./: .cursorrules  .gitignore  ALTERNATIVE_SOLUTIONS.md  CONFIG_OPTIMIZATION.md  Cargo.toml  GCM_AI_README.md  GGUF_TOKENIZER_NOTE.md  GGUF_USAGE.md  GGUF_VS_SAFETENSORS.md  HOW_TO_FIND_MODELS.md  MEMORY_OPTIMIZATION.md  MIGRATION.md  MODEL_SELECTION.md  MODEL_SETUP.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  QWEN2.5_CODER_GGUF_SETUP.md  QWEN_SETUP.md  README.md  migrate.sh  next.md  test_ai_generation.txt
.cargo/: config.toml
.github/workflows/: release.yml
configs/: categories.toml  commit-templates.toml  file-types.toml
scripts/: check-actions-versions.sh  install-configs.sh  install.sh  link.sh  verify-github-actions.sh
src/: main.rs
src/commands/: candle_model.rs  candle_model_quantized.rs  compress.rs  gcm.rs  gcm_ai.rs  mod.rs  server.rs  status.rs  uninstall.rs
src/config/: config.rs  filetypes.rs  mod.rs
